--- a/css/style.css
+++ b/css/style.css
@@ -41,13 +41,13 @@
     font-weight: 900;
 }
 .container{
-    width: 80%;
+    width: 1148px;
     margin: 0 auto;
     border: 1px solid brown;
 }
 body{
     font-family: "Montserrat", sans-serif;
-    font-size: 14px;
+    font-size: 20px;
     font-weight: 400;
     color: #000000;
 }
@@ -63,11 +63,24 @@ ol,ul{
 }
 /* Common CSS End */
 
+
 /* NAV Start */
+.headSection{
+    padding: 20px 0;
+    background-image: url("../images/banner.png");
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+}
+
 #nav{
     width: 100%;
     padding: 15px 0;
-    background-color: #fff;
+    background-color: #f3f3f3;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 9999999999;
 }
 .navWrapper{
     display: flex;
@@ -104,13 +117,26 @@ ol,ul{
 
 /* Banner Start */
 #banner{
-    width: 100%;
-    height: 956px;
+    /* width: 100%;
+    height: 956px; */
     background-image: url("../images/banner.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    padding: 257px 0 200px 381px;
+    padding: 257px 0 200px;
+}
+.destinationWatermark{
+    position: absolute;
+    left: 48%;
+    top: 70px;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+}
+.bannerWrapper{
+    padding-left: 240px;
 }
 .bannerWrapper h1{
     font-size: 89px;
@@ -122,8 +148,377 @@ ol,ul{
     width: 783px;
     font-size: 20px;
     color: #fff;
+    margin-top: 24px;
+}
+.searchLocWrapper{
+    margin-top: 45px;
+    display: flex;
+    align-items: center;
+    column-gap: 15px;
+
+}
+.searchWrapper{
+    width: 430px;
+    background-color: #fff;
+    display: inline-flex;
+    align-items: center;
+    overflow: hidden;
+    column-gap: 5px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+.search{
+    width: 100%;
+    font-size: 20px;
+    padding: 20px 10px;
+    outline: none;
+    border: 0;
+}
+.search::placeholder{
+    font-size: 20px;
+    color: #036E8A;
+}
+.searchWrapper i{
+    font-size: 30px;
+    color: #036E8A;
+    padding: 14px;
+    line-height: 27px;
+    text-align: center;
 }
 /* Banner End */
+/* Destination Start */
+#destination{
+    background-color: #fff;
+    padding: 110px 0;
+    position: relative;
+}
+.accommodation{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    column-gap: 5px;
+}
+.accommodationText{
+    width: 50%;
+}
+.accommodationText p{
+    line-height: 1.5;
+}
+.destinText{
+    font-size: 30px;
+    font-weight: 400;
+    color: #000000;
+    text-transform: uppercase;
+}
+.destinationTitle{
+    width: 500px;
+    font-size: 55px;
+    text-transform: uppercase;
+    color: #036E8A;
+    margin: 30px 0;
+}
+.accommodationText p{
+    width: 550px;
+}
+.accommodationImg{
+    width: 510px;
+    height: auto;
+}
+.desTour{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 55px 65px;
+    margin-top: 70px;
+    margin-bottom: 90px;
+    border: 2px solid #036E8A;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+}
+.desTourLocation{
+    width: 40%;
+    border-inline-end: 4px solid #FF8000;
+}
+.desTourPrice{
+    width: 60%;
+    padding-left: 85px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.desTourLocation h3{
+    font-size: 30px;
+    text-transform: uppercase;
+    color: #036E8A;
+    margin-bottom: 15px;
+}
+.destStar{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    column-gap: 14px;
+}
+.destStar i{
+    width: 27px;
+    gap: 27px;
+    font-size: 27px;
+    line-height: 27px;
+    color: #FF8000;
+}
+.destStar i:last-child{
+    color: rgb(255, 128, 0, 0.5);
+}
+.disTurePriceText p{
+    text-transform: capitalize;
+}
+.disTurePriceText h3{
+    font-size: 60px;
+    color: #036E8A;
+}
+.disBook{
+    font-size: 25px;
+    font-weight: 700;
+    color: #fff;
+    background-color: #FF8000;
+    text-transform: uppercase;
+    padding: 18px 45px;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+}
+.disSpecPackage{
+    font-size: 60px;
+    font-weight: bold;
+    color: #036E8A;
+    text-align: center;
+    text-transform: capitalize;
+    margin-bottom: 23px;
+}
+.disSpecPackagePara{
+    text-align: center;
+    padding: 0 150px;
+    line-height: 1.5;
+    margin-bottom: 90px;
+}
+.cardWrapper{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.card{
+    width: 357px;
+    height: 518px;
+    padding: 38px;
+    border: 1px solid #036E8A;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    position: relative;
+}
+.card::after{
+    content: "";
+}
+.cardTitle{
+    font-size: 40px;
+    font-weight: bold;
+    color: #036E8A;
+    text-transform: uppercase;
+}
+.cardTitlePrice{
+    font-size: 60px;
+    font-weight: bold;
+    color: #036E8A;
+    text-transform: uppercase;
+}
+.cardHead p{
+    font-size: 25px;
+    color: #036E8A;
+    margin-top: 6px;
+}
+.cardBody{
+    margin-top: 40px;
+}
+.cardBody ul{
+    font-size: 18px;
+    color: #036E8A;
+}
+.cardListItem{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    column-gap: 10px;
+    padding: 8px 0;
+}
+.cardStart{
+    font-size: 20px;
+    font-weight: 500;
+    color: #fff;
+    background-color: #036E8A;
+    padding: 12px 18px;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translate(-50%, 50%);
+    -webkit-transform: translate(-50%, 50%);
+    -moz-transform: translate(-50%, 50%);
+    -ms-transform: translate(-50%, 50%);
+    -o-transform: translate(-50%, 50%);
+}
+.cardDelivery{
+    text-align: center;
+    margin-top: 40px;
+}
+.premiumBorder{
+    border-color: #FF8000;
+}
+.premium{
+    color: #FF8000 !important;
+}
+.premiumBG{
+    background-color: #FF8000;
+}
+/* Destination End */
+
+/* FootPrint Start */
+#footPrint{
+    background-color: #036E8A;
+    position: relative;
+}
+.footPrintIllustration{
+    position: absolute;
+    left: 50%;
+    top: 40px;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    z-index: 1;
+}
+.footPrintWrapper{
+    position: relative;
+    z-index: 2;
+    padding: 72px 0;
+    color: #fff;
+}
+.footPrintContent{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    column-gap: 72px;
+}
+.footPrintImg{
+    width: 508px;
+    height: auto;
+}
+.footPrintSubTitle{
+    font-size: 30px;
+    font-weight: 400;
+    /* color: #fff; */
+    text-transform: uppercase;
+}
+.footPrintTitle{
+    font-size: 55px;
+    font-weight: 700;
+    /* color: #fff; */
+    text-transform: uppercase;
+    margin: 30px 0;
+}
+/* FootPrint End */
+
+/* Most Destination Start */
+#mostDest{
+    position: relative;
+    padding: 110px 0;
+}
+.mostDestIllustration{
+    position: absolute;
+    left: 50%;
+    top: 90px;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    z-index: 1;
+}
+.mostDestWrapper{
+    position: relative;
+    z-index: 2;
+}
+.mostDestTitle{
+    font-size: 60px;
+    font-weight: 700;
+    color: #036E8A;
+    text-align: center;
+}
+.mostDestPara{
+    text-align: center;
+    margin-top: 23px;
+    margin-bottom: 110px;
+}
+.itemsWrapper{
+    display: grid;
+    grid-template-columns: repeat(4, 275px);
+    grid-template-rows: repeat(5, 130px);
+    justify-content: space-between;
+    row-gap: 15px;
+}
+.item{
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    overflow: hidden;
+}
+.item img{
+    width: 100%;
+    height: 100%;
+}
+.item_1{
+    grid-area: 1 / 1 / 4 / 1;
+}
+.item_2{
+    grid-area: 1 / 2 / 3 / 2;
+}
+.item_3{
+    grid-area: 1 / 3 / 4 / 3;
+}
+.item_4{
+    grid-area: 1 / 4 / 3 / 4;
+}
+.item_5{
+    grid-area: 4 / 1 / 6 / 1;
+}
+.item_6{
+    grid-area: 3 / 2 / 6 / 2;
+}
+.item_7{
+    grid-area: 4 / 3 / 6 / 3;
+}
+.item_8{
+    grid-area: 3 / 4 / 6 / 4;
+}
+/* Most Destination End */
+
+
 
 /* NAV Start */
 /* NAV End */
