--- a/css/style.css
+++ b/css/style.css
@@ -43,13 +43,15 @@
 .container{
     width: 1148px;
     margin: 0 auto;
-    border: 1px solid brown;
+    /* border: 1px solid brown; */
 }
 body{
     font-family: "Montserrat", sans-serif;
     font-size: 20px;
     font-weight: 400;
     color: #000000;
+    padding: 0 12.5%;
+    background-color: #000000;
 }
 p{
     line-height: 1.3;
@@ -97,6 +99,14 @@ ol,ul{
     font-size: 15px;
     color: #036E8A;
     text-transform: capitalize;
+    transition: all linear 0.3s;
+    -webkit-transition: all linear 0.3s;
+    -moz-transition: all linear 0.3s;
+    -ms-transition: all linear 0.3s;
+    -o-transition: all linear 0.3s;
+}
+.menuItem:hover{
+    color: #FF8000;
 }
 .socialIcons{
     display: flex;
@@ -112,6 +122,20 @@ ol,ul{
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
+    transition: all linear 0.3s;
+    -webkit-transition: all linear 0.3s;
+    -moz-transition: all linear 0.3s;
+    -ms-transition: all linear 0.3s;
+    -o-transition: all linear 0.3s;
+}
+.socialIcons i:hover{
+    color: #FF8000;
+    border-color: #FF8000;
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
 }
 /* NAV End */
 
@@ -294,6 +318,14 @@ ol,ul{
     -moz-border-radius: 15px;
     -ms-border-radius: 15px;
     -o-border-radius: 15px;
+    transition: all linear 0.3s;
+    -webkit-transition: all linear 0.3s;
+    -moz-transition: all linear 0.3s;
+    -ms-transition: all linear 0.3s;
+    -o-transition: all linear 0.3s;
+}
+.disBook:hover{
+    background-color: #c26200;
 }
 .disSpecPackage{
     font-size: 60px;
@@ -325,6 +357,11 @@ ol,ul{
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
     position: relative;
+    transition: all linear 0.3s;
+    -webkit-transition: all linear 0.3s;
+    -moz-transition: all linear 0.3s;
+    -ms-transition: all linear 0.3s;
+    -o-transition: all linear 0.3s;
 }
 .card::after{
     content: "";
@@ -334,17 +371,32 @@ ol,ul{
     font-weight: bold;
     color: #036E8A;
     text-transform: uppercase;
+    transition: all linear 0.3s;
+    -webkit-transition: all linear 0.3s;
+    -moz-transition: all linear 0.3s;
+    -ms-transition: all linear 0.3s;
+    -o-transition: all linear 0.3s;
 }
 .cardTitlePrice{
     font-size: 60px;
     font-weight: bold;
     color: #036E8A;
     text-transform: uppercase;
+    transition: all linear 0.3s;
+    -webkit-transition: all linear 0.3s;
+    -moz-transition: all linear 0.3s;
+    -ms-transition: all linear 0.3s;
+    -o-transition: all linear 0.3s;
 }
 .cardHead p{
     font-size: 25px;
     color: #036E8A;
     margin-top: 6px;
+    transition: all linear 0.3s;
+    -webkit-transition: all linear 0.3s;
+    -moz-transition: all linear 0.3s;
+    -ms-transition: all linear 0.3s;
+    -o-transition: all linear 0.3s;
 }
 .cardBody{
     margin-top: 40px;
@@ -359,7 +411,39 @@ ol,ul{
     align-items: center;
     column-gap: 10px;
     padding: 8px 0;
+    transition: all linear 0.3s;
 }
+
+.cardListItem:nth-last-child(1) {
+    color: rgba(3, 113, 140, 0.5);
+    
+}
+.cardListItem:nth-last-child(2) {
+    color: rgba(3, 113, 140, 0.5);    
+}
+.standardIcon {
+    color: rgba(3, 113, 140) !important; 
+}
+.card:hover{
+    border: 1px solid #FF8000;
+}
+.card:hover .cardTitle{
+    color: #FF8000;
+}
+.card:hover .cardTitlePrice{
+    color: #FF8000;
+}
+.card:hover .cardHead p{
+    color: #FF8000;
+}
+.card:hover .cardListItem{
+    color: #FF8000 !important;
+}
+.card:hover .cardStart{
+    background-color: #FF8000;
+}
+
+
 .cardStart{
     font-size: 20px;
     font-weight: 500;
@@ -379,19 +463,15 @@ ol,ul{
     -moz-transform: translate(-50%, 50%);
     -ms-transform: translate(-50%, 50%);
     -o-transform: translate(-50%, 50%);
+    transition: all linear 0.3s;
+    -webkit-transition: all linear 0.3s;
+    -moz-transition: all linear 0.3s;
+    -ms-transition: all linear 0.3s;
+    -o-transition: all linear 0.3s;
 }
 .cardDelivery{
     text-align: center;
     margin-top: 40px;
-}
-.premiumBorder{
-    border-color: #FF8000;
-}
-.premium{
-    color: #FF8000 !important;
-}
-.premiumBG{
-    background-color: #FF8000;
 }
 /* Destination End */
 
@@ -444,6 +524,7 @@ ol,ul{
 
 /* Most Destination Start */
 #mostDest{
+    background-color: #fff;
     position: relative;
     padding: 110px 0;
 }
@@ -520,14 +601,14 @@ ol,ul{
 
 /* Counter Start */
 #counter{
+    position: relative;
+}
+.counterContent{
     padding: 91px 0 110px;
     background-image: url('../images/counterBG.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    position: relative;
-}
-.counterContent{
     position: relative;
     z-index: 2;
 }
@@ -549,11 +630,13 @@ ol,ul{
     text-align: center;
 }
 /* Counter End */
+/* Group Start */
 #groupPic{
-    margin-top: 90px;
+    padding-top: 90px;
+    background-color: #fff;
     position: relative;
 }
-.groupPicContent{
+.groupPicContent {
     position: relative;
     z-index: 2;
 }
@@ -562,20 +645,466 @@ ol,ul{
     justify-content: flex-start;
     column-gap: 10px;
 }
-.groupPicWrapper img{
+.grupPic1{
+    width: 275px;
+    height: 241px;
+}
+.grupPic2{
     width: 850px;
     height: 241px;
 }
-/* Group Start */
-
 /* Group End */
+/* News Letter Start */
+#newsLetter{
+    padding: 20px 0 128px 0;
+    background-color: #fff;
+    position: relative;
+}
+.newsLetterIllustration{
+    position: absolute;
+    left: 50%;
+    top: -200px;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    z-index: 1;
+}
+.newsContent{
+    position: relative;
+    z-index: 2;
+}
+.newsWrapper{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    column-gap: 61px;
+}
+.newsPicWrapper{
+    width: 514px;
+    height: 482px;
+    overflow: hidden;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+.subPicImg{
+    width: 100%;
+    height: 100%;
+}
+.newsTitle1{
+    font-size: 30px;
+    font-weight: normal;
+    color: #036E8A;
+    text-transform: uppercase;
+}
+.newsTitle{
+    margin-top: 30px;
+    font-size: 55px;
+    font-weight: bold;
+    line-height: 106%;
+    color: #036E8A;
+    text-transform: uppercase;
+}
+.newsSearchBtns{
+    margin-top: 46px;
+}
+.newsSearch{
+    display: inline-flex;
+    justify-content: flex-start;
+    align-items: center;
+    column-gap: 18px;
+    border: 1px solid #036E8A;
+    padding: 21px 56px;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+}
+.newsSearch i{
+    font-size: 27px;
+    color: #036E8A;
 
+}
+.newsSearch input{
+    padding: 10px 5px;
+    outline: none;
+    border: none;
+    background-color: transparent;
+}
+.newsSearch input::placeholder{
+    font-size: 20px;
+    color: #036E8A;
+}
+.newsSearchBtn{
+    font-size: 30px;
+    font-weight: bold;
+    color: #fff;
+    padding: 22px 44px;
+    margin-left: 15px;
+    background-color: #FF8000;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    transition: all linear 0.3s;
+    -webkit-transition: all linear 0.3s;
+    -moz-transition: all linear 0.3s;
+    -ms-transition: all linear 0.3s;
+    -o-transition: all linear 0.3s;
+}
+.newsSearchBtn:hover{
+    background-color: #c26200;
+}
+/* News Letter End */
+/* Partner  Section Start */
+#partner{
+    background-color: #fff;
+    position: relative;
+}
+.container{
+    position: relative;
+    z-index: 2;
+}
+.partnerContent{
+    width: 100%;
+    padding: 72px 0;
+    border: 3px solid #036E8A;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.partnerItem{
+    width: 25%;
+    height: 75px;
+    border-inline-end-width: 3px;
+    border-inline-end-style: solid;
+    border-inline-end-color: #036E8A;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.partnerItem:last-child{
+    border: none;
+}
+/* Partner  Section End */
+/* Customer Section Start */
+#customer{
+    padding: 110px 0 155px;
+    background-color: #fff;
+    position: relative;
+}
+.customerContent{
+    position: relative;
+    z-index: 2;
+}
+.customerTitle{
+    font-size: 60px;
+    font-weight: bold;
+    color: #036E8A;
+    text-align: center;
+    text-transform: uppercase;
+}
+.customerPara{
+    width: 840px;
+    margin: 40px auto 110px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #036E8A;
+    text-align: center;
+}
+.custCardWrapper{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    row-gap: 77px;
 
-
-
-/* NAV Start */
-/* NAV End */
-
-
-
-
+}
+.custCard{
+    width: 47%;
+    background-color: #fff;
+    box-shadow: 5px 5px 11px -4px rgba(0,0,0,0.69);
+    -webkit-box-shadow: 5px 5px 11px -4px rgba(0,0,0,0.69);
+    -moz-box-shadow: 5px 5px 11px -4px rgba(0,0,0,0.69);
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    padding: 33px;
+    transition: all linear 0.3s;
+    -webkit-transition: all linear 0.3s;
+    -moz-transition: all linear 0.3s;
+    -ms-transition: all linear 0.3s;
+    -o-transition: all linear 0.3s;
+}
+.custCardHead{
+    text-align: center;
+}
+.custCardBody{
+    margin-top: 25px;
+    text-align: center;
+}
+.customCardTitle{
+    font-size: 25px;
+    font-weight: 500;
+    color: #036E8A;
+    transition: all linear 0.3s;
+    -webkit-transition: all linear 0.3s;
+    -moz-transition: all linear 0.3s;
+    -ms-transition: all linear 0.3s;
+    -o-transition: all linear 0.3s;
+}
+.customeCardSubTitle{
+    font-size: 20px;
+    font-weight: 700;
+    color: #000;
+    transition: all linear 0.3s;
+    -webkit-transition: all linear 0.3s;
+    -moz-transition: all linear 0.3s;
+    -ms-transition: all linear 0.3s;
+    -o-transition: all linear 0.3s;
+}
+.customStars{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 10px;
+}
+.customStars i{
+    width: 15px;
+    height: 15px;
+    line-height: 15px;
+    font-size: 15px;
+    color: #FF8000;
+    transition: all linear 0.3s;
+    -webkit-transition: all linear 0.3s;
+    -moz-transition: all linear 0.3s;
+    -ms-transition: all linear 0.3s;
+    -o-transition: all linear 0.3s;
+}
+.customCardPara{
+    width: 420px;
+    margin: 20px auto 0;
+    font-size: 20px;
+    font-weight: normal;
+    line-height: 1.5;
+}
+.custCardHover1:hover{
+    background-color: #036E8A;
+    color: #fff;
+}
+.custCardHover1:hover .customCardTitle{
+    color: #fff;
+}
+.custCardHover1:hover .customeCardSubTitle{
+    color: #fff;
+}
+.custCardHover1:hover .customStars i{
+    color: #fff;
+}
+.custCardHover2:hover{
+    background-color: #FF8000;
+    color: #fff;
+}
+.custCardHover2:hover .customCardTitle{
+    color: #fff;
+}
+.custCardHover2:hover .customeCardSubTitle{
+    color: #fff;
+}
+.custCardHover2:hover .customStars i{
+    color: #fff;
+}
+/* Customer Section End */
+/* Help Section Start */
+#help{
+    background-color: #fff;
+    padding-bottom: 120px;
+}
+.helpWrapper{
+    width: 100%;
+    height: 653px;
+    background-color: #036E8A;
+    padding: 36px;
+    text-align: center;
+    border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
+    position: relative;
+}
+.helpIllustration{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+}
+.helpContent{
+    position: relative;
+    z-index: 2;
+    color: #fff;
+}
+.helpTitle{
+    font-size: 70px;
+    font-weight: bold;
+    text-align: center;
+    text-transform: capitalize;
+    margin-top: 50px;
+    position: relative;
+}
+.helpTitle::after{
+    content: "";
+    width: 73%;
+    height: 3px;
+    background-color: #fff;
+    position: absolute;
+    left: 50%;
+    bottom: -60px;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+}
+.helpPara{
+    width: 661px;
+    margin: 135px auto 0;
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 1.5;
+    text-align: center;
+    position: relative;
+}
+.helpPara::after{
+    content: "";
+    width: 73%;
+    height: 3px;
+    background-color: #fff;
+    position: absolute;
+    left: 50%;
+    bottom: -60px;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+}
+.helpMessage{
+    margin: 105px auto 0;
+    font-size: 30px;
+    font-weight: 500;
+    background-color: #FF8000;
+    display: inline-block;
+    text-transform: capitalize;
+    /*color: #fff;
+    */padding: 20px 65px;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    transition: all linear 0.3s;
+    -webkit-transition: all linear 0.3s;
+    -moz-transition: all linear 0.3s;
+    -ms-transition: all linear 0.3s;
+    -o-transition: all linear 0.3s;
+}
+.helpMessage:hover{
+    background-color: #c26200;
+}
+/* Help Section End */
+/* Footer Section Start */
+#footer{
+    background-color: #fff;
+}
+.footerWrapper{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 98px;
+}
+.footerItem{
+    width: 25%;
+}
+.footerBottom{
+    background-color: #FF8000;
+}
+.footerItemTitle{
+    font-size: 25px;
+    font-weight: bold;
+    color: #036E8A;
+    padding-bottom: 70px;
+    position: relative;
+}
+.footerItemTitle::after{
+    content: "";
+    width: 142px;
+    height: 3px;
+    background-color: #036E8A;
+    position: absolute;
+    left: 0;
+    bottom: 40px;
+}
+.footerList li a{
+    display: block;
+    font-size: 20px;
+    font-weight: 400;
+    color: #262525;
+    text-transform: capitalize;
+    margin-bottom: 15px;
+}
+.footerBottomContent{
+    width: 100%;
+    padding: 30px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+}
+.footerBotttomSocial{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 10px;
+}
+.footerBotttomSocial i{
+    width: 28px;
+    height: 28px;
+    font-size: 13px;
+    line-height: 28px;
+    text-align: center;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    transition: all linear 0.3s;
+    -webkit-transition: all linear 0.3s;
+    -moz-transition: all linear 0.3s;
+    -ms-transition: all linear 0.3s;
+    -o-transition: all linear 0.3s;
+}
+.footerBotttomSocial i:hover{
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+}
+/* Footer Section End */
